# MultiContactController

./: CMakeLists.txt  LICENSE  README.md  _config.yaml  depends.rosinstall  package.xml  robots.txt
.github/workflows/: ci-catkin.yaml  ci-standalone.yaml  ci.yaml  clang-format.yaml
.github/workflows/config/: DDP.yaml  MotionSampleField.yaml  MotionSampleStepladder.yaml  PC.yaml  SRB.yaml
cnoid/: CMakeLists.txt
cnoid/model/: FloorCheckeredPattern.body  MCC_materials.yaml  SampleField.body  SampleStepladder.body
cnoid/project/: .gitignore  CMakeLists.txt  MCC_JVRC1_SampleField.in.cnoid  MCC_JVRC1_SampleStepladder.in.cnoid
description/: CMakeLists.txt
description/aliases/: .gitignore
description/urdf/: SampleField.urdf  SampleStepladder.urdf
doc/: CMakeLists.txt
doxygen/: CentroidalManagerDDP_8h.html  CentroidalManagerDDP_8h__incl.map  CentroidalManagerDDP_8h__incl.md5  CentroidalManagerDDP_8h_source.html  CentroidalManagerPC_8h.html  CentroidalManagerPC_8h__incl.map  CentroidalManagerPC_8h__incl.md5  CentroidalManagerPC_8h_source.html  CentroidalManagerSRB_8h.html  CentroidalManagerSRB_8h__incl.map  CentroidalManagerSRB_8h__incl.md5  CentroidalManagerSRB_8h_source.html  CentroidalManager_8h.html  CentroidalManager_8h__dep__incl.map  CentroidalManager_8h__dep__incl.md5  CentroidalManager_8h__incl.map  CentroidalManager_8h__incl.md5  CentroidalManager_8h_source.html  CommandTypes_8h.html  CommandTypes_8h__dep__incl.map  CommandTypes_8h__dep__incl.md5  CommandTypes_8h__incl.map  CommandTypes_8h__incl.md5  CommandTypes_8h_source.html  ConfigMotionState_8h.html  ConfigMotionState_8h__incl.map  ConfigMotionState_8h__incl.md5  ConfigMotionState_8h_source.html  GuiStepState_8h.html  GuiStepState_8h__incl.map  GuiStepState_8h__incl.md5  GuiStepState_8h_source.html  GuiWalkState_8h.html  GuiWalkState_8h__incl.map  GuiWalkState_8h__incl.md5  GuiWalkState_8h_source.html  InitialState_8h.html  InitialState_8h__incl.map  InitialState_8h__incl.md5  InitialState_8h_source.html  (+294 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+44 more)
etc/: MultiContactController.in.yaml  mc_rtc.in.yaml
include/MultiContactController/: CentroidalManager.h  CommandTypes.h  ConfigUtils.h  ContactCommand.h  ContactTypes.h  LimbManager.h  LimbManagerSet.h  LimbTypes.h  MathUtils.h  MultiContactController.h  PostureManager.h  RobotUtils.h  State.h  SwingTraj.h
include/MultiContactController/centroidal/: CentroidalManagerDDP.h  CentroidalManagerDdpCentroidal.h  CentroidalManagerPC.h  CentroidalManagerSRB.h
include/MultiContactController/states/: ConfigMotionState.h  GuiStepState.h  GuiWalkState.h  InitialState.h  InterruptState.h
include/MultiContactController/swing/: SwingTrajCubicSplineSimple.h
launch/: display.launch
mujoco/: CMakeLists.txt
mujoco/model/: CMakeLists.txt  SampleField.xml
rviz/: display.rviz  display2.rviz
src/: CMakeLists.txt  CentroidalManager.cpp  CommandTypes.cpp  ContactCommand.cpp  ContactTypes.cpp  LimbManager.cpp  LimbManagerSet.cpp  LimbTypes.cpp  MathUtils.cpp  MultiContactController.cpp  PostureManager.cpp  State.cpp  lib.cpp
src/centroidal/: CentroidalManagerDDP.cpp  CentroidalManagerDdpCentroidal.cpp  CentroidalManagerPC.cpp  CentroidalManagerSRB.cpp
src/states/: CMakeLists.txt  ConfigMotionState.cpp  GuiStepState.cpp  GuiWalkState.cpp  InitialState.cpp  InterruptState.cpp
src/swing/: SwingTrajCubicSplineSimple.cpp
tests/: CMakeLists.txt
tests/src/: TestCommandTypes.cpp  TestMathUtils.cpp
