<package format="2">
  <name>multi_contact_controller</name>
  <version>0.1.0</version>
  <description>
    Humanoid multi-contact motion controller
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/multi_contact_controller</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_collection</depend>
  <depend>force_control_collection</depend>
  <depend>centroidal_control_collection</depend>

  <build_depend>eigen</build_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>cnoid_ros_utils</exec_depend>

  <doc_depend>doxygen</doc_depend>
</package>
